# grapheme-nn

./: .gitignore  CLAUDE.md  Cargo.toml  GRAPHEME_Math.md  GRAPHEME_Math_Dataset.md  GRAPHEME_Technical_Abstract.md  GRAPHEME_Vision.md  README.md  SESSION_HANDOFF.md  TRAINING_STRATEGY.md  VISION_ARCHITECTURE.md  multitask_model.json  test_determinism.sh  test_embedding_consistency.sh  train_config.toml  train_config_kindergarten.toml
.taskguard/: config.toml
data/kindergarten/: level_1.jsonl  simple_qa.jsonl
docs/: BACKWARD_PASS_ANALYSIS.md  DIFFPOOL_SOLUTION.md  GRADIENT_FLOW_ANALYSIS.md  LEARNABLE_THRESHOLD_IMPLEMENTATION.md  PROTOCOL_MIGRATION.md  SABAG_SIMPLIFIED.md  VISION_DRIFT_PREVENTION.md
grapheme-agent/: Cargo.toml
grapheme-agent/benches/: agent_bench.rs
grapheme-agent/src/: learnable.rs  lib.rs
grapheme-brain-common/: Cargo.toml
grapheme-brain-common/src/: autoencoder.rs  graph.rs  lib.rs  node.rs  text_brain.rs  traits.rs  transform.rs  utils.rs
grapheme-chem/: Cargo.toml
grapheme-chem/benches/: chem_bench.rs
grapheme-chem/src/: lib.rs
grapheme-code/: Cargo.toml
grapheme-code/benches/: code_bench.rs
grapheme-code/src/: lib.rs  tree_sitter_parser.rs
grapheme-core/: Cargo.toml
grapheme-core/benches/: core_bench.rs
grapheme-core/src/: graph_morphism.rs  graph_serialization.rs  lib.rs
grapheme-engine/: Cargo.toml
grapheme-engine/benches/: engine_bench.rs
grapheme-engine/src/: lib.rs
grapheme-ground/: Cargo.toml
grapheme-ground/benches/: ground_bench.rs
grapheme-ground/src/: learnable.rs  lib.rs
grapheme-law/: Cargo.toml
grapheme-law/benches/: law_bench.rs
grapheme-law/src/: lib.rs
grapheme-math/: Cargo.toml
grapheme-math/benches/: math_bench.rs
grapheme-math/src/: lib.rs
grapheme-memory/: Cargo.toml
grapheme-memory/benches/: memory_bench.rs
grapheme-memory/src/: learnable.rs  lib.rs
grapheme-meta/: Cargo.toml
grapheme-meta/benches/: meta_bench.rs
grapheme-meta/src/: learnable.rs  lib.rs
grapheme-multimodal/: Cargo.toml
grapheme-multimodal/benches/: multimodal_bench.rs
grapheme-multimodal/src/: learnable.rs  lib.rs
grapheme-music/: Cargo.toml
grapheme-music/benches/: music_bench.rs
grapheme-music/src/: lib.rs
grapheme-parallel/: Cargo.toml
grapheme-parallel/benches/: parallel_bench.rs
grapheme-parallel/src/: lib.rs
grapheme-polish/: Cargo.toml
grapheme-polish/benches/: polish_bench.rs
grapheme-polish/src/: lib.rs
grapheme-reason/: Cargo.toml
grapheme-reason/benches/: reason_bench.rs
grapheme-reason/src/: learnable.rs  lib.rs
grapheme-router/: Cargo.toml
grapheme-router/src/: lib.rs
grapheme-safety/: Cargo.toml
grapheme-safety/benches/: safety_bench.rs
grapheme-safety/src/: lib.rs
grapheme-tests/: Cargo.toml
grapheme-tests/src/: lib.rs
grapheme-tests/tests/: integration_a2a_mcp.rs  integration_asimov_laws.rs  integration_cognitive.rs  integration_pipeline.rs  integration_robustness.rs  integration_text_web_learning.rs
grapheme-tests/tests_disabled/: integration_cognitive.rs  integration_llm_collaboration.rs
grapheme-time/: Cargo.toml
grapheme-time/benches/: time_bench.rs
grapheme-time/src/: lib.rs
grapheme-train/: Cargo.toml
grapheme-train/benches/: efficiency_bench.rs  train_bench.rs
grapheme-train/src/: a2a_protocol.rs  a2a_registry.rs  backprop.rs  code_loss.rs  collaborative_learning.rs  cortex_mesh.rs  curriculum.rs  g2g.rs  graph_data.rs  graph_knowledge_base.rs  graph_llm_translation.rs  graph_trainer.rs  graph_transform_net.rs  html_parser.rs  humaneval_benchmark.rs  humaneval_encoder.rs  knowledge_distillation.rs  knowledge_extraction.rs  lib.rs  llm_client.rs  math_nl_augmentation.rs  mcp_client.rs  mcp_server.rs  multi_agent.rs  nl_math_pipeline.rs  online_learner.rs  optimizer.rs  parallel_cortex.rs  semantic_decoder.rs  text_ingestion.rs  text_preprocessor.rs  training_utils.rs  unified_cortex.rs  web_crawler.rs  web_fetcher.rs
grapheme-train/src/bin_disabled/: demo_agi_router.rs  eval_humaneval.rs  generate.rs  generate_mixed_agi.rs  import_datasets.rs  query.rs  repl.rs  test_backward_poc.rs  test_gradient_check.rs  test_gradient_descent.rs  test_gradient_long.rs  train.rs  train_agi.rs  train_ast_code.rs  train_ast_gen.rs  train_code_gen.rs  train_code_graph.rs  train_cortex_mesh.rs  train_from_web.rs  train_kindergarten.rs  train_kindergarten_sabag.rs  train_math_sabag.rs  train_mnist.rs  train_multitask.rs  train_semantic_code.rs  train_unified_agi.rs  train_unified_code.rs  train_with_llm.rs  validate.rs
grapheme-train/src/datasets/: fashion_mnist.rs  gsm8k.rs  math_comp.rs  mod.rs  squad.rs
grapheme-vision/: Cargo.toml
grapheme-vision/benches/: vision_bench.rs
grapheme-vision/src/: lib.rs
grapheme-vision/tests/: mnist_integration.rs
grapheme-world/: Cargo.toml
grapheme-world/benches/: world_bench.rs
grapheme-world/src/: learnable.rs  lib.rs
tasks/api/: api-001.md  api-002.md  api-003.md  api-004.md  api-005.md  api-006.md  api-007.md  api-008.md  api-009.md  api-010.md  api-011.md  api-012.md  api-013.md  api-014.md  api-015.md  api-016.md  api-017.md  api-018.md  api-019.md  api-020.md  api-021.md
tasks/backend/: backend-001.md  backend-002.md  backend-003.md  backend-004.md  backend-005.md  backend-006.md  backend-007.md  backend-008.md  backend-009.md  backend-010.md  backend-011.md  backend-012.md  backend-013.md  backend-014.md  backend-015.md  backend-016.md  backend-017.md  backend-018.md  backend-019.md  backend-020.md  backend-021.md  backend-022.md  backend-023.md  backend-024.md  backend-025.md  backend-026.md  backend-027.md  backend-028.md  backend-029.md  backend-030.md  backend-031.md  backend-032.md  backend-033.md  backend-034.md  backend-035.md  backend-036.md  backend-037.md  backend-038.md  backend-039.md  backend-040.md  (+199 more)
tasks/docs/: docs-001.md  docs-002.md  docs-003.md
tasks/integration/: integration-001.md  integration-002.md  integration-003.md  integration-004.md  integration-005.md
tasks/setup/: setup-001.md
tasks/testing/: testing-001.md  testing-002.md  testing-003.md  (+16 more)
