[workspace]
resolver = "2"
members = [
    "grapheme-engine",
    "grapheme-polish",
    "grapheme-math",
    "grapheme-core",
    "grapheme-train",
    "grapheme-memory",
    "grapheme-reason",
    "grapheme-world",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eliran Sabag"]
license = "MIT"
repository = "https://github.com/Eliran79/grapheme-nn"
description = "GRAPHEME: Graph Representation through Adaptive Pattern Hierarchy and Emergent Modular Encoding"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph processing
petgraph = { version = "0.6", features = ["serde-1"] }

# Parallelism
rayon = "1.10"

# Numeric
num-traits = "0.2"

# Testing
criterion = "0.5"
