[workspace]
resolver = "2"
members = [
    "grapheme-engine",
    "grapheme-polish",
    "grapheme-math",
    "grapheme-core",
    "grapheme-train",
    "grapheme-memory",
    "grapheme-reason",
    "grapheme-world",
    "grapheme-multimodal",
    "grapheme-meta",
    "grapheme-agent",
    "grapheme-ground",
    "grapheme-parallel",
    "grapheme-code",
    "grapheme-law",
    "grapheme-music",
    "grapheme-chem",
    "grapheme-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eliran Sabag"]
license = "MIT"
repository = "https://github.com/Eliran79/grapheme-nn"
description = "GRAPHEME: Graph Representation through Adaptive Pattern Hierarchy and Emergent Modular Encoding"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph processing
petgraph = { version = "0.6", features = ["serde-1"] }

# Parallelism
rayon = "1.10"

# Numeric
num-traits = "0.2"
ndarray = "0.15"
rand = "0.8"

# Testing
criterion = "0.5"

# Parsing (tree-sitter for multi-language support)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-c = "0.23"
