[package]
name = "grapheme-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Agency and goal system for GRAPHEME: autonomous goal formation, planning, and adaptation"

[dependencies]
# Workspace dependencies
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }

# Graph processing
petgraph = { workspace = true, features = ["serde-1"] }

# Core crates
grapheme-core = { path = "../grapheme-core" }
grapheme-world = { path = "../grapheme-world" }
grapheme-meta = { path = "../grapheme-meta" }
grapheme-safety = { path = "../grapheme-safety" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "agent_bench"
harness = false
