[package]
name = "grapheme-code"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Code Brain: AST-based code analysis and compilation for GRAPHEME"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
grapheme-core = { path = "../grapheme-core" }

# Tree-sitter for multi-language parsing (optional feature)
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-c = { workspace = true, optional = true }

[features]
default = []
tree-sitter-parsing = ["tree-sitter", "tree-sitter-rust", "tree-sitter-python", "tree-sitter-javascript", "tree-sitter-c"]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "code_bench"
harness = false
