[package]
name = "grapheme-code"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Code Brain: AST-based code analysis and compilation for GRAPHEME"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
grapheme-core = { path = "../grapheme-core" }
grapheme-brain-common = { path = "../grapheme-brain-common" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "code_bench"
harness = false
