[package]
name = "grapheme-code"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Code Brain: AST-based code analysis and compilation for GRAPHEME"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
grapheme-core = { path = "../grapheme-core" }
grapheme-brain-common = { path = "../grapheme-brain-common" }

# Tree-sitter for multi-language parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-c = "0.21"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "code_bench"
harness = false
