[package]
name = "grapheme-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Layer 1: Formal math rules engine with symbolic manipulation and numerical evaluation"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
num-traits.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "engine_bench"
harness = false
