[package]
name = "grapheme-law"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Law Brain: Legal reasoning and case law analysis for GRAPHEME"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
grapheme-core = { path = "../grapheme-core" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "law_bench"
harness = false
