[package]
name = "grapheme-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory architecture for GRAPHEME: episodic, semantic, procedural, and working memory"

[dependencies]
# Workspace dependencies
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }

# Graph processing
petgraph = { workspace = true, features = ["serde-1"] }

# Core crate for graph types
grapheme-core = { path = "../grapheme-core" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "memory_bench"
harness = false
