[package]
name = "grapheme-multimodal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-modal fusion for GRAPHEME: vision, audio, language, tactile, action"

[dependencies]
# Workspace dependencies
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }

# Graph processing
petgraph = { workspace = true, features = ["serde-1"] }

# Core crate
grapheme-core = { path = "../grapheme-core" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "multimodal_bench"
harness = false
