[package]
name = "grapheme-parallel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Parallel-first graph processing for GRAPHEME: parallel iterators, batch processing, and sharding"

[dependencies]
# Workspace dependencies
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }

# Parallelism
rayon.workspace = true

# Graph processing
petgraph.workspace = true

# Core crate
grapheme-core = { path = "../grapheme-core" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parallel_bench"
harness = false
