[package]
name = "grapheme-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AGI-ready cognitive router for GRAPHEME multi-modal processing"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
grapheme-core = { path = "../grapheme-core" }
grapheme-time = { path = "../grapheme-time" }
grapheme-math = { path = "../grapheme-math" }
grapheme-vision = { path = "../grapheme-vision" }

[dev-dependencies]
criterion.workspace = true
